--- a/requirements.txt
+++ b/requirements.txt
@@ -139,12 +139,12 @@ soupsieve==2.6
 SpeechRecognition==3.10.4
 stack-data==0.6.3
 sympy==1.13.1
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-termcolor==2.4.0
-terminado==0.18.1
-tf_keras==2.17.0
+tensorboard
+tensorboard-data-server
+tensorflow
+termcolor
+terminado
+tf_keras
 threadpoolctl==3.5.0
 tinycss2==1.3.0
 tokenizers==0.20.1
